bisonc++ (2.5.0)

  * Renamed parser/spec/aux to parser/spec/auxiliary to avoid file/device
    confusion on some systems

  * Removed inclusions of superfluous bobcat/fnwrap1c headers

  * Replaced all FnWrap1c calls by FnWrap::unary

  * Added check for d_currentRule == 0 in rules/addproduction. d_currentRule
    could be a 0-pointer, in which case addproduction shouldn't do anything.
    d_currentRule is a 0-pointer in, e.g. the erroneous grammar submitted
    by Justin Madru about which he rightfully remarked that even though
    erroneous bisonc++ shouldn't crash on it. This is his stripped-down
    grammar: 
        %token X x_list
        %%
        x_list:
            x_list X
        |
            X
        ;

bisonc++ (2.4.8)

  * Recompilation using option --std=c++0x, required because of Bobcat's use
    of C++0x syntax.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 05 Sep 2009 17:25:56 +0200

bisonc++ (2.4.7)

  * Streams processed by an `#include' directive were not properly closed, 
    resulting in a memory leak. The Scanner's code was modified to plug that
    leak. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 06 May 2009 09:36:02 +0200

bisonc++ (2.4.6)

  * Changed the build script to allow finer control over construction and
    installation of parts of the package

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 24 Mar 2009 19:16:10 +0100

bisonc++ (2.4.5)

  * DateTime (generator/filter.cc) adapted due to change of Bobcat's DateTime 
    interface

bisonc++ (2.4.4)

  * typed terminal tokens (as used in, e.g., %type<fieldname>) were not
    included in the parserbase's Tokens__ enum since their symbol type is left
    at UNDETERMINED. tokens used in type lists can also be non-terminals, in
    which case their symbol type is changed accordingly. In 2.4.4. a symbol is
    selected for inclusion in the Tokens__ enum if it's a terminal token but
    also if it's a symbol that has been used in the grammar although its 