@@ -1,2 +1,2 @@
-#define VERSION "2.5.0"
+#define VERSION "2.5.1"
 #define YEARS   "2005-2010"
